assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

/* Asterix Overide default styles */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
 /* Body and General Styles */
 body {
    font-family: 'Roboto', sans-serif;
    line-height: 1.6;
    background-color: #f4f4f4;
    color: #333;
  }
  
  a {
    text-decoration: none;
    color: inherit;
  }
  
  ul {
    list-style-type: none;
  }
  
  /* Header/Nav Styles */
  header {
    background-color: rgba(0, 0, 0, 0.7);
    padding: 10px 20px;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 10;
  }
 /* Mobile-first Navbar */
nav ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column; /* items vertical on small screens */
  text-align: center;
  display: none; /* Initially hidden on small screens */
}
  
  nav ul li {
    margin: 10px 0;
  }
  
  nav ul li a {
    color: white;
    font-size: 15px;
    font-weight: bold;
    text-decoration: none;
    letter-spacing: 4px;
    text-transform: uppercase;
  }
  
  nav ul li a:hover {
    color: #ffcc00;
  }
  #logo-header {
    color: white;
    font-size: 280%;
    line-height: 75px;
    margin: 0 0.5rem;
    letter-spacing: 4px;
    text-transform: uppercase;
  }
  .header-container {
    display: flex;
    align-items: center;
    color: white;
  }
  .logo-container {
    margin-right: 10px;
    margin-top: -5px;
    width: 100px;
    height: 53px;
  }
  /* Hamburger Menu */
#hamburger {
  display: block;
  cursor: pointer;
  font-size: 30px;
  color: white;
  background: none;
  border: none;
}
#hamburger:focus {
  outline: none;
}
/* large screens (above 768px) show the navbar items in a row */
@media (min-width: 768px) {
  nav ul {
    display: flex; /* Display horizontally on large screens */
    justify-content: center;
    flex-direction: row;
  }
  nav ul li {
    margin: 0 20px;
  }
  #hamburger {
    display: none; /* Hide the hamburger icon on larger screens */
  }
}
nav ul.show {
  display: flex;
}
   /* Main content*/
   .main-content {
    background-image: url('../images/maincribgoch.jpg');
    background-size: cover;
    background-position: center;
    height: 100vh;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
  }
  
  .main-content h2 {
    font-size: 3rem;
    margin-bottom: 10px;
  }
  
  .main-content p {
    font-size: 1.5rem;
    margin-bottom: 20px;
  }
  
  .btn-book-now {
    background-color: #ffcc00;
    padding: 10px 20px;
    font-size: 1.2rem;
    border-radius: 5px;
    color: black;
    font-weight: bold;
  }
  
  .btn-book-now:hover {
    background-color: #e6b800;
  }
/* Regions Section */
  .regions {
    padding: 40px 20px;
    background-color: #e6e6e6;
    text-align: center;
  }
  
  .regions h2 {
    font-size: 2.5rem;
    margin-bottom: 30px;
    letter-spacing: 4px;
    text-transform: uppercase;
  }
  
  .region-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
  }
  
  .region-card {
    background-color: white;
    width: 350px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    border-radius: 0;
    overflow: hidden;
  }
  
  .region-card img {
    width: 100%;
    height: 200px;
    object-fit: cover;
  }
  
  .region-card h3 {
    font-size: 1.8rem;
    padding: 10px;
    height:110px;
    text-align: center;
    background-color: #333;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    letter-spacing: 4px;
    text-transform: uppercase;
  }
  
  .region-card p {
    padding: 10px;
    font-size: 1rem;
  }
  .hover-over:hover {
    color: #ffcc00;
  }
  /* About Section */
  .about {
    padding: 50px 20px;
    background-color: #414040;
    color: white;
    text-align: center;
  }
  
  .about h2 {
    font-size: 2.5rem;
    margin-bottom: 20px;
    letter-spacing: 4px;
    text-transform: uppercase;
  }
  
  .about p {
    font-size: 1.2rem;
    margin-bottom: 20px;
  }
/* Booking Section */
  .booking {
    padding: 50px 20px;
    background-color: #414040;
    color: white;
    text-align: center;
  }
  .booking h2 {
    font-size: 2.5rem;
    margin-bottom: 20px;
    letter-spacing: 4px;
    text-transform: uppercase;
  }
  
  .booking p {
    font-size: 1.2rem;
    margin-bottom: 20px;
  }
/* Contact Section */
  .contact {
    padding: 50px 20px;
    text-align: center;
  }
  .contact h2 {
    font-size: 2.5rem;
    margin-bottom: 20px;
    letter-spacing: 4px;
    text-transform: uppercase;
  }

  .btn.btn-warning {
    font-weight: bold;
    color: black;
    background-color: #ffcc00;
  }

  .btn.btn-warning:hover {
    background-color: #e6b800;
  }
  
   /* Footer Styles */
   footer {
    background-color: #222;
    color: white;
    padding: 20px;
    text-align: center;
  }
  footer a:hover {
    color: #ffcc00;
  }
  @media (max-width: 768px) {
    #logo-header {
        font-size: 1.5rem;
    }
  }
  @media (max-width: 500px) {
    #logo-header {
        display: none;
    }
  }

  /* Booking form html page styles */
.booking-container {
  max-width: 600px;
  margin: 0 auto;
  margin-top: 143.8px; 
  margin-bottom: 20px;  
  background-color: #fff;
  padding: 30px;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

/* Header styling */
.booking-container h1 {
  text-align: center;
  margin-bottom: 20px;
  font-size: 2rem;
  color: #2c3e50;
  letter-spacing: 4px;
  text-transform: uppercase;
}

/* Form Group */
.form-group {
  margin-bottom: 20px;
}

/* Labels */
.form-group label {
  display: block;
  font-weight: bold;
  margin-bottom: 5px;
  color: #2c3e50;
}

/* Input fields and textarea */
.form-group input, 
.form-group textarea, 
.form-group select {
  width: 100%;
  padding: 10px;
  border: 1px solid #ddd;
  border-radius: 4px;
  font-size: 1rem;
  color: #333;
}

.form-group input:focus, 
.form-group textarea:focus, 
.form-group select:focus {
  border-color: black;
  outline: none;
}

/* Button styling */
.submit-btn {
  width: 100%;
  padding: 12px;
  background-color: #ffcc00;
  color: black;
  border: none;
  border-radius: 4px;
  font-size: 1.1rem;
  cursor: pointer;
  font-weight: bold;
}

.submit-btn:hover {
  background-color: #e6b800;
}

.submit-btn:focus {
  outline: none;
}

/* Equipment html Page Styles */

#content-wrapper {
  display: flex; 
  justify-content: center; 
  margin-top: 143.8px;
}

/* Container for image and text */

#equip-container {
  position: relative; 
  display: inline-block; 
  max-width: 100%; 
}

.equip-wrapper {
  position: relative; 
  width: 100%; 
}

.equip-image {
  width: auto; 
  height: auto; 
  display: block; 
  max-width: 100%; 
}

#equip-text {
  position: absolute; 
  bottom: 50px; 
  right: 50px; 
  background-color: rgba(0, 0, 0, 0.7); 
  color: white; 
  padding: 10px; 
  border-radius: 5px; 
  max-width: 300px; 
  width: auto;
  height: 200px;
  letter-spacing: 4px;
  text-transform: uppercase;
}

#equip-text h2 {
  font-size: 2rem;
}

#equip-text h3 {
  font-size: 1.6rem;
}

/* Media Query for responsiveness */
@media (max-width: 768px) {
  /* On smaller screens, center the #equip-text */
  #equip-text {
      position: absolute; 
      bottom: 10px; 
      left: 50%; 
      transform: translateX(-50%); 
      width: auto; 
      max-width: 90%; 
      padding: 8px; 
      min-width: 150px;
      max-height: 150px;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
    }

  #equip-text h2 {
    font-size: 1.5rem;
  }
  
  #equip-text h3 {
    font-size: 1.2rem;
  }
}

@media (max-width: 480px) {
  /* Further adjustments for very small screens */
  #equip-text {
      bottom: 10px; 
      left: 50%;
      transform: translateX(-50%);
      max-width: 85%; 
  }
  
  #equip-text h2 {
    font-size: 1rem;
  } 
  
  #equip-text h3 {
    font-size: 0.8rem;
  }
}

/* Equipment Content */

.max-width {
  max-width: 1800px;
  display: block;
  margin: 0 auto;
}

.equip-content {
  width: 80%;
  margin: 50px auto;
  padding: 20px;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.equip-content h2 {
  text-align: center;
  color: #2C3E50;
  font-size: 1.8rem;
  margin-bottom: 20px;
  letter-spacing: 4px;
  text-transform: uppercase;
}

@media (max-width: 768px) {
  /* decrease text size for small screens */
  .equip-content h2 {
    font-size: 1.5rem;
  }
  
}

@media (max-width: 480px) {
  /* decrease text size for very small screens */
  .equip-content h2 {
    font-size: 1rem;
  }
  
}

.paragraph {
  font-size: 1.1em;
  color: #555;
  text-align: justify;
  margin-bottom: 20px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  background-color:  #ecf0f1;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.cta {
  text-align: center;
  font-size: 1.2em;
  font-weight: bold;
  color: black;
  padding: 10px;
  background-color: #ffcc00;
  border-radius: 5px;
  margin-top: 20px;
}

.cta:hover {
  background-color: #e6b800;
  color: black;
  cursor: pointer;
}

.equip-content ul {
  list-style-type: disc;
  padding: 0;
  padding-left: 10px;
  list-style-position: outside;
}

.equip-content li {
  font-size: 1.1em;
  margin: 10px 0;
  padding-left: 10px;
  position: relative;
}

.equipment-list {
  background-color: #ecf0f1;
  padding: 20px;
  border-radius: 5px;
  margin-top: 20px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

